# Bot-DP

./: .gitignore  README.md  package-lock.json
assistant_notebook/: docker-compose.yml  pyproject.toml
assistant_notebook/src/: langgraph.ipynb  main.ipynb  nlp.ipynb
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  makefile  requirements.txt
backend/app/: Readme.md  main.py
backend/src/: main.py
backend/src/app/: app.py
backend/src/test/: test_classifier.py  test_financial_agent.py  test_financial_tool.py  test_health.py  test_load_prompt_file.py  test_logger.py  test_notice_agent.py  test_notice_tool.py  test_query.py  test_weather_agent.py  test_weather_tool.py
frontend/: .gitignore  README.md  default.conf  docker-compose.yaml  index.html  makefile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/__mocks__/stores/: chat.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/components/: ChatComponent.vue  FunctionButton.vue  NavBar.vue  WelcomeFunctions.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts
frontend/src/utils/: consts.ts  types.ts
frontend/src/views/: ChatView.vue  HomeView.vue
frontend/tests/: chat.test.ts  responsive.test.ts
frontend/tests/pinia/: chat.pinia.test.ts
laboratory/: .env.example  README.md  docker-compose.yml
laboratory/prompts/: notice.txt  weather.txt
laboratory/src/: main.ipynb
reverse_proxy/: docker-compose.yaml  makefile
reverse_proxy/config/: nginx.conf
(+28 files in other folders)
