[project]
name = "assistant-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "graphviz>=0.20.3",
    "hf-xet>=1.0.3",
    "jupyterlab>=4.4.0",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.1",
    "langchain-openai>=0.3.12",
    "langchain>=0.3.23",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.28",
    "pygraphviz>=1.14",
    "requests>=2.32.3",
    "spacy>=3.8.5",
    "transformers[sentencepiece]>=4.51.2",
]
